smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/parse-errors/expected-shape-name-but-eof.smithy
// Syntax error at line 4, column 7: Expected one or more spaces, but found NEWLINE('\n') | Model
namespace com.foo

string
